Local pull success and  sending back to git-hub

--- a/test.html
+++ b/test.html
@@ -15,7 +15,8 @@
 
     <h2> This is Test Change 2 </h2>
     
-    <p> This is GitHub Para Test Change </p>
+    <p> This is GitHub Para Test Change </p>  
     
+    <p> This is VS code para confirming the above was succssefully pulled and updated locally from Git-hub  </p>
 </body>
 </html>
